package com.moriaty.uml;
/**
 * <p>
 * Person
 * </p>
 *
 * @author Moriaty
 * @since 2021/7/24 22:49
 */
public class Person {

    private Integer id;
    private String name;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
