package com.moriaty.uml.dependence;
/**
 * <p>
 * Department
 * </p>
 *
 * @author Moriaty
 * @since 2021/7/24 22:59
 */
public class Department {
}
