package com.moriaty.uml.dependence;
/**
 * <p>
 * IdCard
 * </p>
 *
 * @author Moriaty
 * @since 2021/7/24 23:00
 */
public class IdCard {
}
