package com.moriaty.uml.dependence;
/**
 * <p>
 * PersonDao
 * </p>
 *
 * @author Moriaty
 * @since 2021/7/24 22:59
 */
public class PersonDao {
}
