package com.moriaty.uml.dependence;

/**
 * <p>
 * PersonServiceBean
 * </p>
 *
 * @author Moriaty
 * @since 2021/7/24 23:00
 */
public class PersonServiceBean {

    private PersonDao personDao;

    public void save(Person person) {

    }

    public IdCard getIdCard(Integer personId) {
        return null;
    }

    public void modify() {
        Department department = new Department();
    }
}
