@startuml

class IdCard {
}

class Person {
}

class PersonDao {
}

class Department {
}

class PersonServiceBean {
    personDao: PersonDao
    save(person: Person): void
    getIdCard(personId: Integer): IdCard
    modify(): void
}

PersonServiceBean ..> IdCard
PersonServiceBean ..> Person
PersonServiceBean ..> PersonDao
PersonServiceBean ..> Department

@enduml